--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
+/* CSS & Styling */
+
+:root {
+  --lightGray: rgb(150, 150, 150);
+}
+
+.App * {
+  scroll-behavior: smooth;
+}
+
 .App {
-  text-align: center;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.headlineAnimated {
+  border-right: 0.15em solid var(--lightGray);
+  animation: blink-caret 0.75s step-end infinite;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.slide-in-left {
+  -webkit-animation: slide-in-left 2s cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s
+    both;
+  animation: slide-in-left 2s cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s both;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.slide-in-right {
+  -webkit-animation: slide-in-right 2.5s cubic-bezier(0.075, 0.82, 0.165, 1)
+    0.2s both;
+  animation: slide-in-right 2.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s both;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+/* Animations */
+@keyframes blink-caret {
+  from,
   to {
-    transform: rotate(360deg);
+    border-color: transparent;
+  }
+  50% {
+    border-color: var(--lightGray);
+  }
+}
+
+@-webkit-keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-32px);
+    transform: translateX(-32px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-32px);
+    transform: translateX(-32px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(32px);
+    transform: translateX(32px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(32px);
+    transform: translateX(32px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
   }
 }
